# tiktok-to-tweets-automation

./: .env.example  .gitignore  GEMINI.md  README.md  Transcribe_Audio_With_Whisper.ipynb  database.py  debug_env.py  debug_openai.py  list_models.py  prompts.py  pyproject.toml  receiver.py  researcher.py  start.sh
templates/: index.html
